dust-server/gke/dust-endpoint.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dust-server-fe
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dust-server
    networking.gke.io/managed-certificates: devmodecloud-gke
spec:
  backend:
    serviceName: dust-server
    servicePort: 80
