dust-server/gke/dust-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dust-server-fe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - gke.devmode.cloud
    secretName: gke-devmodecloud-tls
  rules:
  - host: gke.devmode.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: dust-server
          servicePort: 80
